--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 /* Loading Screen */
 .preloader {
     z-index: 2;
@@ -1434,7 +1440,6 @@ animation06
 .intro-scroll {
     background-color: black;
     padding-bottom: 100px;
-    z-index: 20;
 }
 
 .intro-scroll svg {
@@ -1720,6 +1725,11 @@ iframe {
     padding-bottom: 50px;
 }
 
+.skills-languages h3 {
+    display: flex;
+    justify-content: center;
+}
+
 .skills-container {
     display: flex;
     justify-content: space-around;
@@ -1729,13 +1739,41 @@ iframe {
 
 .skills-container h3 {
     font-family: 'Lato', sans-serif;
-    font-size: 30px;
+    padding-bottom: 20px;
+    font-size: 40px;
 }
 
 .skills-container li {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     list-style-type: none;
+    padding-bottom: 10px;
     font-size: 25px;
+}
+
+.skills-container img {
+    transition: transform .2s;
+}
+
+.skills-container img:hover {
+    -ms-transform: scale(1.3); /* IE 9 */
+    -webkit-transform: scale(1.3); /* Safari 3-8 */
+    transform: scale(1.3); 
+}
+
+.skill img {
+    width: 80px;
+    height: 80px;
+}
+
+.skill-soft li {
+    transition: transform .2s;
+}
+
+.skill-soft li:hover {
+    transition: transform .2s;
+    -ms-transform: scale(1.8); /* IE 9 */
+    -webkit-transform: scale(1.8); /* Safari 3-8 */
+    transform: scale(1.8); 
 }
 
 /* Project Styles */
@@ -1760,6 +1798,10 @@ iframe {
     -webkit-justify-content: center;
     padding-left: 25px;
     padding-bottom: 50px;
+}
+
+.card__by {
+    color: rgb(170, 105, 7);
 }
 
 .card--1 .card__img, .card--1 .card__img--hover {
@@ -1972,6 +2014,18 @@ svg:visited svg:hover{
     justify-content: center;
 }
 
+input[type="text"] {
+    font-size:15px;
+}
+
+input[type="email"] {
+    font-size:15px;
+}
+
+textarea {
+    font-size:15px;
+}
+
 @media only screen and (max-width: 1600px) {
     .intro-title {
         font-size: 55px;
@@ -1993,6 +2047,14 @@ svg:visited svg:hover{
 
     .intro-scroll svg {
         display: none;
+    }
+
+    .intro-text {
+        padding-top: 100px;
+    }
+
+    .intro-picture {
+        padding-top: 100px;
     }
 
     .intro-text h2 {
@@ -2019,33 +2081,37 @@ svg:visited svg:hover{
     }
 
     .skills-container h3 {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     .skills-container li {
-        font-size: 15px;
+        font-size: 25px;
+    }
+
+    .skill img {
+        width: 50px;
+        height: 50px;
     }
 
     .project-title h3 {
-        font-size: 30px;
+        font-size: 35px;
     }
 
     .contact-container h3 {
-        font-size: 30px;
+        font-size: 35px;
     }
 
     svg {
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
     }
 
     .form-group label {
-        font-size: 15px;
+        font-size: 20px;
     }
 
     .form-group input {
-        font-size: 15px;
-        width: 200px;
+        width: 250px;
         height: 30px;
     }
 
