--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+     <!-- add icon link -->
+      <link rel = "icon" href="{% static 'images/portfolio_logo_black.png' %}"  type = "image/x-icon"> 
+          
+
     <!-- CSS -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/styles2.scss' %}" rel="stylesheet" type="text/css">
@@ -25,138 +29,139 @@
 
     <!-- Loading Screen -->
     <div class="preloader">
+        <!-- Loading Animations -->
         <div class="animation01">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    <div class="animation02">
-        <div></div>
-        <div></div>
-    </div>
-    <div class="animation03">
-        <div class="circle">
-            <div class="circle_element01"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
-        <div class="circle">
-            <div class="circle_element02"></div>
+        <div class="animation02">
+            <div></div>
+            <div></div>
         </div>
-        <div class="circle">
-            <div class="circle_element03"></div>
-        </div>
-        <div class="animation04">
-            <div class="line_wrapper line_wrapper01">
-                <span class="line line01"></span>
+        <div class="animation03">
+            <div class="circle">
+                <div class="circle_element01"></div>
             </div>
-            <div class="rotate45">
-                <div class="line_wrapper line_wrapper02">
-                    <span class="line line02"></span>
+            <div class="circle">
+                <div class="circle_element02"></div>
+            </div>
+            <div class="circle">
+                <div class="circle_element03"></div>
+            </div>
+            <div class="animation04">
+                <div class="line_wrapper line_wrapper01">
+                    <span class="line line01"></span>
+                </div>
+                <div class="rotate45">
+                    <div class="line_wrapper line_wrapper02">
+                        <span class="line line02"></span>
+                    </div>
+                </div>
+                <div class="line_wrapper line_wrapper03">
+                    <span class="line line03"></span>
+                </div>
+                <div class="rotate135">
+                    <div class="line_wrapper line_wrapper04">
+                        <span class="line line04"></span>
+                    </div>
+                </div>
+                <div class="line_wrapper line_wrapper05">
+                    <span class="line line05"></span>
+                </div>
+                <div class="rotate-135">
+                    <div class="line_wrapper line_wrapper06">
+                        <span class="line line06"></span>
+                    </div>
+                </div>
+                <div class="line_wrapper line_wrapper07">
+                    <span class="line line07"></span>
+                </div>
+                <div class="rotate-45">
+                    <div class="line_wrapper line_wrapper08">
+                        <span class="line line08"></span>
+                    </div>
                 </div>
             </div>
-            <div class="line_wrapper line_wrapper03">
-                <span class="line line03"></span>
-            </div>
-            <div class="rotate135">
-                <div class="line_wrapper line_wrapper04">
-                    <span class="line line04"></span>
+            <div class="animation05">
+                <div class="double_wrapper02 green02">
+                    <div class="double_wrapper01 green01">
+                        <div class="double_block green00"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="line_wrapper line_wrapper05">
-                <span class="line line05"></span>
-            </div>
-            <div class="rotate-135">
-                <div class="line_wrapper line_wrapper06">
-                    <span class="line line06"></span>
+                <div class="double_wrapper02 navy02">
+                    <div class="double_wrapper01 navy01">
+                        <div class="double_block navy00"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="line_wrapper line_wrapper07">
-                <span class="line line07"></span>
-            </div>
-            <div class="rotate-45">
-                <div class="line_wrapper line_wrapper08">
-                    <span class="line line08"></span>
+                <div class="double_wrapper02 yellow02">
+                    <div class="double_wrapper01 yellow01">
+                        <div class="double_block yellow00"></div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="animation05">
-            <div class="double_wrapper02 green02">
-                <div class="double_wrapper01 green01">
-                    <div class="double_block green00"></div>
+                <div class="double_wrapper02 blue02">
+                    <div class="double_wrapper01 blue01">
+                        <div class="double_block blue00"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="double_wrapper02 navy02">
-                <div class="double_wrapper01 navy01">
-                    <div class="double_block navy00"></div>
-                </div>
-            </div>
-            <div class="double_wrapper02 yellow02">
-                <div class="double_wrapper01 yellow01">
-                    <div class="double_block yellow00"></div>
-                </div>
-            </div>
-            <div class="double_wrapper02 blue02">
-                <div class="double_wrapper01 blue01">
-                    <div class="double_block blue00"></div>
-                </div>
-            </div>
-            <div class="double_wrapper02 red02">
-                <div class="double_wrapper01 red01">
-                    <div class="double_block red00"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="animation06">
-        <div class="rhombus05">
-            <div class="rhombus04">
-                <div class="rhombus03">
-                    <div class="rhombus02">
-                        <div class="rhombus01"></div>
+                <div class="double_wrapper02 red02">
+                    <div class="double_wrapper01 red01">
+                        <div class="double_block red00"></div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="animation07">
-        <div class="circle">
-            <div class="circle_element01"></div>
-        </div>
-        <div class="line_wrapper line_wrapper01">
-            <span class="line line01"></span>
-        </div>
-        <div class="rotate60">
-            <div class="line_wrapper line_wrapper02">
-                <span class="line line02"></span>
+        <div class="animation06">
+            <div class="rhombus05">
+                <div class="rhombus04">
+                    <div class="rhombus03">
+                        <div class="rhombus02">
+                            <div class="rhombus01"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="rotate120">
-            <div class="line_wrapper line_wrapper03">
-                <span class="line line03"></span>
+        <div class="animation07">
+            <div class="circle">
+                <div class="circle_element01"></div>
+            </div>
+            <div class="line_wrapper line_wrapper01">
+                <span class="line line01"></span>
+            </div>
+            <div class="rotate60">
+                <div class="line_wrapper line_wrapper02">
+                    <span class="line line02"></span>
+                </div>
+            </div>
+            <div class="rotate120">
+                <div class="line_wrapper line_wrapper03">
+                    <span class="line line03"></span>
+                </div>
+            </div>
+            <div class="line_wrapper line_wrapper04">
+                <span class="line line04"></span>
+            </div>
+            <div class="rotate-120">
+                <div class="line_wrapper line_wrapper05">
+                    <span class="line line05"></span>
+                </div>
+            </div>
+            <div class="rotate-60">
+                <div class="line_wrapper line_wrapper06">
+                    <span class="line line06"></span>
+                </div>
             </div>
         </div>
-        <div class="line_wrapper line_wrapper04">
-            <span class="line line04"></span>
+        <div class="animation08">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
-        <div class="rotate-120">
-            <div class="line_wrapper line_wrapper05">
-                <span class="line line05"></span>
-            </div>
-        </div>
-        <div class="rotate-60">
-            <div class="line_wrapper line_wrapper06">
-                <span class="line line06"></span>
-            </div>
-        </div>
-    </div>
-    <div class="animation08">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
     </div>
 
     <!-- Intro -->
@@ -176,12 +181,17 @@
         <div class="intro-text" name="intro-text">
           <h2 data-aos="fade-right">About Me</h2>
           <p data-aos="fade-right" data-aos-duration="600">
-          I am a new Grad Software Engineer who enjoys coding and helping others.
-          I have experience in web development through self-initiated projects. 
-          I am a motivated learner who is seeking professional opportunities to solve problems 
-          and create meaningful applications/services.
+          I am a new UCSC Graduate (June 2021) who enjoys coding and I am currently looking for Web Developer positions. 
+          Although I have experience in web development and UI/UX design through self-initiated projects,
+          I have a strong desire to constantly learn and improve my programming and relational skills. Check out my portfolio for more!
           </p>
 
+          <p data-aos="fade-right" data-aos-duration="600">
+          Other hobbies I enjoy: Basketball, Volleyball, Lifting, playing guitar, helping others
+          and simply spending time with friends/family.
+          </p>
+
+          <!-- Modal Popup for Resume -->
           <div class="page">
             <div class="page__container">
               <a data-aos="fade-right" data-aos-duration="1000" href="#popup-article" id="myBtn" class="btn" data-type="modal-trigger" data-hover="click me!"><div>My Resume</div></a>
@@ -196,46 +206,55 @@
             </div>
           </div>
         </div>
+
+        <!-- Profile Picture-->
         <div class="intro-picture">
           <img src="{% static 'images/portfolio.jpg' %}">
         </div>
       </div>
-
-      <!-- Cool Animation -->
       
       <!-- Skills Section -->
       <div class="skill">
         <div class="skill-title">
-            <h2 data-aos="fade-left">Skills</h2>
+            <h2 data-aos="fade-left">My Skills</h2>
         </div>
 
         <div class="skills-container">
             <div data-aos="fade-down" class="skill-languages">
-              <h3>Languages</h3>
+              <h3>Hard Skills</h3>
               <ul>
-                  <li>Python</li>
-                  <li>Javascript</li>
-                  <li>HTML5</li>
-                  <li>CSS3</li>
-                  <li>C</li>
+                  <li><img src="{% static 'images/python.png' %}"></li>
+                  <li><img src="{% static 'images/javascript.png' %}"></li>
+                  <li><img src="{% static 'images/jquery.png' %}"></li>
+                  <li><img src="{% static 'images/html5.png' %}"></li>
+                  <li><img src="{% static 'images/css3.png' %}"></li>
+
               </ul>
             </div>
             <div data-aos="fade-down" class="skill-framework" data-aos-duration="800">
-              <h3>Frameworks/Libraries</h3>
+              <br><br><br>
               <ul>
-                  <li>Django</li>
-                  <li>jQuery</li>
-                  <li>Anime.js</li>
-                  <li>React</li>
+                  <li><img src="{% static 'images/c.png' %}"></li>
+                  <li><img src="{% static 'images/django.png' %}"></li>
+                  <li><img src="{% static 'images/heroku.png' %}"></li>
+                  <li><img src="{% static 'images/react.png' %}"></li>
+              </ul>
+            </div>
+            <div data-aos="fade-down" class="skill-learn" data-aos-duration="1200">
+              <h3>Currently Learning</h3>
+              <ul>
+                  <li><img src="{% static 'images/mysql.png' %}"></li>
+                  <li><img src="{% static 'images/nodejs.png' %}"></li>
               </ul>
             </div>
             <div data-aos="fade-down" class="skill-soft" data-aos-duration="1200">
               <h3>Soft Skills</h3>
               <ul>
                   <li>Leadership</li>
+                  <li>Teachable</li>
                   <li>Problem-Solving</li>
                   <li>Collaboration</li>
-                  <li></li>
+                  <li>Passionate/Hardworking</li>
               </ul>
             </div>
         </div>
@@ -246,7 +265,7 @@
         <div class="project-title">
           <h3 data-aos="fade-right">Projects</h3>
           <section class="cards">
-            <article class="card card--1" data-aos="zoom-out-up" data-aos-duration="700">
+            <article class="card card--1" data-aos="zoom-out-up" data-aos-duration="400">
               <div class="card__info-hover">
               </div>
               
@@ -257,11 +276,12 @@
               <div class="card__info">
                 <span class="card__category">Django | HTML5 | CSS3 | Javascript</span>
                 <h4 class="card__title">Kyrie Fellowship Website</h4>
-                <span class="card__by">by<a href="#" class="card__author" title="author"> Nathaniel Chang</a></span>
+                <span class="card__by">Created a website for a Santa Cruz campus group that includes a contact form and up-to-date information
+                for those who don't have social media. Deployed with Heroku.</a></span>
               </div>
             </article>
               
-            <article class="card card--2" data-aos="zoom-out-up" data-aos-duration="800">
+            <article class="card card--2" data-aos="zoom-out-up" data-aos-duration="500">
               <div class="card__info-hover">
                 
               </div>
@@ -272,11 +292,12 @@
               <div class="card__info">
                 <span class="card__category">Javacsript | CSS3 | HTML5 | WebGL</span>
                 <h4 class="card__title">3D Maze Game</h4>
-                <span class="card__by">by <a href="#" class="card__author" title="author">Nathaniel Chang</a></span>
+                <span class="card__by">Developed a simple 3D maze/quiz game using Javascript and WebGL to create 3D shapes and lighting.
+                Fun little game made to enjoy during quarantine.</span>
               </div>
             </article>  
 
-            <article class="card card--3" data-aos="zoom-out-up" data-aos-duration="900">
+            <article class="card card--3" data-aos="zoom-out-up" data-aos-duration="600">
               <div class="card__info-hover">
                 
               </div>
@@ -288,13 +309,13 @@
                 <span class="card__category">Three.js | CSS3 | HTML5</span>
                 <br><br>
                 <h4 class="card__title">Mini 3D World</h4>
-                <span class="card__by">by <a href="#" class="card__author" title="author">Nathaniel Chang</a></span>
+                <span class="card__by">Created a mini 3D world that can be viewed from different views with orbit controls.</span>
               </div>
             </article>  
           </section>
 
           <section class="cards">
-            <article class="card card--4" data-aos="zoom-out-up" data-aos-duration="1000">
+            <article class="card card--4" data-aos="zoom-out-up" data-aos-duration="700">
               <div class="card__info-hover">
               </div>
               
@@ -305,11 +326,12 @@
               <div class="card__info">
                 <span class="card__category">Python (Matplotlib, NumPy, Pandas) </span>
                 <h4 class="card__title">Data Mining/Analysis</h4>
-                <span class="card__by">by<a href="#" class="card__author" title="author"> Nathaniel Chang, Joshua Cheung, Theresa Tan</a></span>
+                <span class="card__by">Researched and analyzed whether UC schools are using affirmative action
+                in their admittance/acceptance process.</span>
               </div>
             </article>
               
-            <article class="card card--5" data-aos="zoom-out-up" data-aos-duration="1100">
+            <article class="card card--5" data-aos="zoom-out-up" data-aos-duration="800">
               <div class="card__info-hover">
                 
               </div>
@@ -320,11 +342,11 @@
               <div class="card__info">
                 <span class="card__category">Django | JS (Anime.js, JQuery) | CSS3 | HTML5</span>
                 <h4 class="card__title">Django Portfolio</h4>
-                <span class="card__by">by <a href="#" class="card__author" title="author">Nathaniel Chang</a></span>
+                <span class="card__by">Designed/created in Django framework; deployed on Heroku to display my work in a concise and visually appealling way.</span>
               </div>
             </article>  
 
-            <article class="card card--6" data-aos="zoom-out-up" data-aos-duration="1200">
+            <article class="card card--6" data-aos="zoom-out-up" data-aos-duration="900">
               <div class="card__info-hover">
                 
               </div>
@@ -399,12 +421,10 @@
                         <button type="submit" class="submit-btn" style="text-decoration: none;">Submit</button>
                     </div>
                 </form>
-                <br><br><br><br><br>
             </div>
           </div>
         {% endif %}
       </div>
-      <br><br><br><br><br>
     </div>
 
   <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
